Wave 1: mechanical Java 21+/25 idioms via curated OpenRewrite recipes
89 files, +241/-197, behavior-preserving only:
- instanceof pattern matching (binding vars replace casts)
- List.get(0)/get(size-1) -> getFirst()/getLast() (SequencedCollection)
- unused variables -> unnamed _
- text blocks for inline AQL/JSON strings
- Paths.get -> Path.of; @Serial annotations; extra semicolons removed

Rejected from the UpgradeToJava25 composite (see rewrite-init.gradle):
MigrateMainMethodToInstanceMain (starter main() reflection risk),
ReplaceSystemOutWithIOPrint (churn), UpdateGradleWrapper (pinned).

Gates: compileJava+compileTestJava green on release=25, major 69 verified,
leo-main-starter boot smoke on JDK 25 OK (per docs/06 Wave 1 exit gate)